protegendo os videos

--- a/public/video.html
+++ b/public/video.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Comp atible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Testando Streaming</title>
 </head>
@@ -10,7 +11,7 @@
   <h2>Testando Streaming</h2>
 
   <video id="videoplayer" controls>
-    <source src="/episodes/stream?videoUrl=videos/course-1/configuracao-obs-canvas.mp4" type="video/mp4">
+    <source src="/episodes/stream?videoUrl=videos/course-1/configuracao-obs-canvas.mp4&token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6NCwiZmlyc3ROYW1lIjoiR2FicmllbGEiLCJlbWFpbCI6ImdhYmlzZGV2ZnJvbnRAZW1haWwuY29tIiwiaWF0IjoxNzAyMTU3MDQxLCJleHAiOjE3MDI3NjE4NDF9.yKHFyseGVMxFIszJW-wMfGcxyUOSKv4vufnFMcQIkJk" type="video/mp4">
   </video>
 
   <script>
@@ -19,4 +20,4 @@
     myvideo.play();
   </script>
 </body>
-</html
+</html>
